...
//  Copyright © 2020 hong3. All rights reserved.
//

import UIKit

class PreviewTableCell: UITableViewCell {
    static let identifier = "PreviewTableCell"
    weak var delegate: CollectionCellDidSelected?
    var resultArray: [AppResult]? {
        didSet {
            collectionView.reloadData()
        }
    }
...
