...
}

class DetailNewFunctionCell: UITableViewCell {
    static let identifier = "DetailNewFunctionCell"
    weak var delegate: DetailTableCellMoreBtnSelected?
    private let titleView = UIView()
    private let titleLabel = BlackLabel(text: "새로운 기능")
    private let versionLabel = GrayLabel()
    private let releaseDateLabel = GrayLabel()
    
    private let descriptionView = UIView()
    private let descriptionLabel = BlackLabel()
    private var moreBtn: UILabel = {
        let label = LinkLabel(text: "   더 보기 ")
        label.accessibilityIdentifier = "detailMoreBtn"
        return label
    }()
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
        setupUI()
...
