...
//  Copyright © 2020 hong3. All rights reserved.
//

import UIKit

class DetailDescriptionCell: UITableViewCell {
    static let identifier = "DetailDescriptionCell"
    weak var delegate: DetailTableCellMoreBtnSelected?
    private var sellerURL: URL?
    private let descrpitionView = UIView()
    private let infoView: UIView = {
       let view = UIView()
        view.accessibilityIdentifier = "DetailInfoView"
        view.isAccessibilityElement = true
        return view
    }()
    
    private let descriptionLabel: UILabel = {
        let label = UILabel()
...
